docs: added import categories uploading file to docs (#19)
