# src/modules/cars/services/importCategory/ImportCategoryController.ts
@@ -3,12 +3,12 @@ import { container } from "tsyringe";
 import { ImportCategoryService } from "./ImportCategoryService";
 
 export class ImportCategoryController {
-  handle(req: Request, res: Response): Response {
+  async handle(req: Request, res: Response): Promise<Response> {
     const { file } = req;
     const importCategoryService = container.resolve(ImportCategoryService);
 
-    importCategoryService.execute(file);
+    await importCategoryService.execute(file);
 
-    return res.send();
+    return res.status(201).send();
   }
 }
